# cgltf-CSharp

./: .gitmodules  README.md  licenses.txt
.github/workflows/: bindgen.yml  build.yml  commit.yml
bindgen/: config-build-c-library.json  config-extract-linux.json  config-extract-macos.json  config-extract-windows.json  config-generate-cs.json
src/c/production/cgltf/: CMakeLists.txt  cgltf.c
src/cs/: cgltf.sln
src/cs/production/cgltf-CSharp/: _README_PACKAGE.md  cgltf-CSharp.csproj
src/cs/samples/test/: Program.cs  test.csproj
